--- a/Capstone/Capstone/App.xaml
+++ b/Capstone/Capstone/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Capstone"
-             StartupUri="MainWindow.xaml">
+             Startup="Buggy_Startup"
+             >
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
